Added code for different plots in Jupyter notebooks

--- a/src/3-scatter-plot.ipynb
+++ b/src/3-scatter-plot.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -26,16 +26,28 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "def validate_data(x, y):\n",
+    "    if not isinstance(x, list) or not isinstance(y, list):\n",
+    "        raise TypeError(\"Both x and y should be lists.\")\n",
+    "    if len(x) != len(y):\n",
+    "        raise ValueError(\"x and y must have the same length.\")\n",
+    "    if not all(isinstance(i, (int, float)) for i in x + y):\n",
+    "        raise TypeError(\"All elements in x and y must be integers or floats.\")\n",
+    "\n",
     "x = [1, 2, 3, 4, 5]\n",
     "y = [5, 4, 3, 2, 1]\n",
     "\n",
-    "plt.scatter(x, y)\n",
+    "try:\n",
+    "    validate_data(x, y)\n",
+    "    plt.scatter(x, y)\n",
     "\n",
-    "plt.title('Scatter Plot Example')\n",
-    "plt.xlabel('X-axis')\n",
-    "plt.ylabel('Y-axis')\n",
+    "    plt.title('Scatter Plot Example')\n",
+    "    plt.xlabel('X-axis')\n",
+    "    plt.ylabel('Y-axis')\n",
     "\n",
-    "plt.show()\n",
+    "    plt.show()\n",
+    "except (TypeError, ValueError) as e:\n",
+    "    print(f\"Error: {e}\")\n",
     "\n"
    ]
   }
