--- a/src/4-pie-chart.ipynb
+++ b/src/4-pie-chart.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -26,15 +26,30 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "def validate_data(sizes, labels):\n",
+    "    if not isinstance(sizes, list) or not isinstance(labels, list):\n",
+    "        raise TypeError(\"Both sizes and labels should be lists.\")\n",
+    "    if len(sizes) != len(labels):\n",
+    "        raise ValueError(\"sizes and labels must have the same length.\")\n",
+    "    if not all(isinstance(size, (int, float)) and size >= 0 for size in sizes):\n",
+    "        raise TypeError(\"All elements in sizes must be non-negative integers or floats.\")\n",
+    "    if not all(isinstance(label, str) for label in labels):\n",
+    "        raise TypeError(\"All elements in labels must be strings.\")\n",
+    "    if sum(sizes) == 0:\n",
+    "        raise ValueError(\"The sum of sizes must be greater than zero to create a pie chart.\")\n",
+    "\n",
     "sizes = [15, 30, 45, 10]\n",
     "labels = ['A', 'B', 'C', 'D']\n",
     "\n",
-    "plt.pie(sizes, labels=labels, autopct='%1.1f%%')\n",
+    "try:\n",
+    "    validate_data(sizes, labels)\n",
+    "    plt.pie(sizes, labels=labels, autopct='%1.1f%%')\n",
     "\n",
-    "plt.title('Pie Chart Example')\n",
+    "    plt.title('Pie Chart Example')\n",
     "\n",
-    "plt.show()\n",
-    "\n"
+    "    plt.show()\n",
+    "except (TypeError, ValueError) as e:\n",
+    "    print(f\"Error: {e}\")\n"
    ]
   }
  ],
