--- a/src/5-subplot.ipynb
+++ b/src/5-subplot.ipynb
@@ -26,28 +26,75 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "fig, axs = plt.subplots(2, 2)\n",
+    "def validate_numeric_data(x, y, name=\"Data\"):\n",
+    "    \"\"\"Validate that x and y are lists of the same length containing numeric values.\"\"\"\n",
+    "    if not isinstance(x, list) or not isinstance(y, list):\n",
+    "        raise TypeError(f\"{name}: Both x and y should be lists.\")\n",
+    "    if len(x) != len(y):\n",
+    "        raise ValueError(f\"{name}: x and y must have the same length.\")\n",
+    "    if not all(isinstance(i, (int, float)) for i in x + y):\n",
+    "        raise TypeError(f\"{name}: All elements in x and y must be integers or floats.\")\n",
+    "\n",
+    "def validate_bar_data(categories, values):\n",
+    "    \"\"\"Validate that categories and values are lists of the same length.\"\"\"\n",
+    "    if not isinstance(categories, list) or not isinstance(values, list):\n",
+    "        raise TypeError(\"Bar Plot: categories and values should be lists.\")\n",
+    "    if len(categories) != len(values):\n",
+    "        raise ValueError(\"Bar Plot: categories and values must have the same length.\")\n",
+    "    if not all(isinstance(cat, str) for cat in categories):\n",
+    "        raise TypeError(\"Bar Plot: All categories must be strings.\")\n",
+    "    if not all(isinstance(val, (int, float)) and val >= 0 for val in values):\n",
+    "        raise TypeError(\"Bar Plot: All values must be non-negative integers or floats.\")\n",
+    "\n",
+    "def validate_pie_data(sizes, labels):\n",
+    "    \"\"\"Validate that sizes and labels are lists of the same length and that sizes sum > 0.\"\"\"\n",
+    "    if not isinstance(sizes, list) or not isinstance(labels, list):\n",
+    "        raise TypeError(\"Pie Chart: sizes and labels should be lists.\")\n",
+    "    if len(sizes) != len(labels):\n",
+    "        raise ValueError(\"Pie Chart: sizes and labels must have the same length.\")\n",
+    "    if not all(isinstance(size, (int, float)) and size >= 0 for size in sizes):\n",
+    "        raise TypeError(\"Pie Chart: All sizes must be non-negative integers or floats.\")\n",
+    "    if not all(isinstance(label, str) for label in labels):\n",
+    "        raise TypeError(\"Pie Chart: All labels must be strings.\")\n",
+    "    if sum(sizes) == 0:\n",
+    "        raise ValueError(\"Pie Chart: The sum of sizes must be greater than zero.\")\n",
+    "\n",
     "\n",
     "x = [1, 2, 3, 4, 5]\n",
     "y1 = [1, 4, 9, 16, 25]\n",
     "y2 = [5, 4, 3, 2, 1]\n",
+    "bar_categories = ['A', 'B', 'C']\n",
+    "bar_values = [3, 7, 2]\n",
+    "pie_sizes = [15, 30, 45, 10]\n",
+    "pie_labels = ['A', 'B', 'C', 'D']\n",
     "\n",
-    "axs[0, 0].plot(x, y1)\n",
-    "axs[0, 0].set_title('Line Plot')\n",
+    "try:\n",
     "\n",
-    "axs[0, 1].scatter(x, y2)\n",
-    "axs[0, 1].set_title('Scatter Plot')\n",
+    "    validate_numeric_data(x, y1, \"Line Plot\")\n",
+    "    validate_numeric_data(x, y2, \"Scatter Plot\")\n",
+    "    validate_bar_data(bar_categories, bar_values)\n",
+    "    validate_pie_data(pie_sizes, pie_labels)\n",
     "\n",
-    "axs[1, 0].bar(['A', 'B', 'C'], [3, 7, 2])\n",
-    "axs[1, 0].set_title('Bar Plot')\n",
+    " \n",
+    "    fig, axs = plt.subplots(2, 2)\n",
     "\n",
-    "axs[1, 1].pie([15, 30, 45, 10], labels=['A', 'B', 'C', 'D'], autopct='%1.1f%%')\n",
-    "axs[1, 1].set_title('Pie Chart')\n",
+    "    axs[0, 0].plot(x, y1)\n",
+    "    axs[0, 0].set_title('Line Plot')\n",
     "\n",
-    "plt.tight_layout()\n",
+    "    axs[0, 1].scatter(x, y2)\n",
+    "    axs[0, 1].set_title('Scatter Plot')\n",
     "\n",
-    "plt.show()\n",
-    "\n"
+    "    axs[1, 0].bar(bar_categories, bar_values)\n",
+    "    axs[1, 0].set_title('Bar Plot')\n",
+    "\n",
+    "    axs[1, 1].pie(pie_sizes, labels=pie_labels, autopct='%1.1f%%')\n",
+    "    axs[1, 1].set_title('Pie Chart')\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "except (TypeError, ValueError) as e:\n",
+    "    print(f\"Error: {e}\")\n"
    ]
   }
  ],
