--- a/src/2-bar-plot.ipynb
+++ b/src/2-bar-plot.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -26,16 +26,31 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "def validate_data(categories, values):\n",
+    "    if not isinstance(categories, list) or not isinstance(values, list):\n",
+    "        raise TypeError(\"Both categories and values should be lists.\")\n",
+    "    if len(categories) != len(values):\n",
+    "        raise ValueError(\"categories and values must have the same length.\")\n",
+    "    if not all(isinstance(cat, str) for cat in categories):\n",
+    "        raise TypeError(\"All elements in categories must be strings.\")\n",
+    "    if not all(isinstance(val, (int, float)) for val in values):\n",
+    "        raise TypeError(\"All elements in values must be integers or floats.\")\n",
+    "\n",
     "categories = ['A', 'B', 'C', 'D']\n",
     "values = [3, 7, 2, 5]\n",
     "\n",
-    "plt.bar(categories, values)\n",
+    "try:\n",
+    "    validate_data(categories, values)\n",
+    "    plt.bar(categories, values)\n",
     "\n",
-    "plt.title('Bar Plot Example')\n",
-    "plt.xlabel('Categories')\n",
-    "plt.ylabel('Values')\n",
+    "    plt.title('Bar Plot Example')\n",
+    "    plt.xlabel('Categories')\n",
+    "    plt.ylabel('Values')\n",
     "\n",
-    "plt.show()\n"
+    "    plt.show()\n",
+    "except (TypeError, ValueError) as e:\n",
+    "    print(f\"Error: {e}\")\n",
+    "\n"
    ]
   }
  ],
